# esp32-s3-storybook-console

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/brookesia_app_gravity_blocks/: CMakeLists.txt  esp_brookesia_app_gravity_blocks.cpp
components/brookesia_app_gyro_shapes/: CMakeLists.txt  esp_brookesia_app_gyro_shapes.cpp  idf_component.yml
components/brookesia_app_lvgl_showcase/: CMakeLists.txt  esp_brookesia_app_lvgl_showcase.cpp
components/brookesia_app_power/: CMakeLists.txt  esp_brookesia_app_power.cpp
components/brookesia_app_settings/: CMakeLists.txt  esp_brookesia_app_settings.cpp  idf_component.yml
components/brookesia_app_spectrum/: CMakeLists.txt  esp_brookesia_app_spectrum.cpp  idf_component.yml
components/brookesia_app_video/: CMakeLists.txt  esp_brookesia_app_video.cpp  idf_component.yml
components/brookesia_core/: CMakeLists.txt
components/brookesia_core/systems/phone/widgets/app_launcher/: esp_brookesia_app_launcher_icon.cpp
components/settings_service/: CMakeLists.txt  settings_service.cpp  settings_service.hpp
components/storybook_axp2101/: CMakeLists.txt  LICENSE
components/storybook_qmi8658/: CMakeLists.txt
components/storybook_qmi8658/include/: qmi8658.h
components/storybook_ui_helpers/: CMakeLists.txt  storybook_ui_helpers.cpp
components/storybook_ui_helpers/include/: storybook_ui_helpers.hpp
components/suite_settings_service/: CMakeLists.txt  suite_settings_service.cpp  suite_settings_service.hpp
components/suite_ui_font_service/: CMakeLists.txt  suite_ui_font_service.cpp  suite_ui_font_service.hpp
docs/: handoff_2026-03-29.md  software_design.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/dark/: app_launcher_data.hpp  core_data.hpp  status_bar_data.hpp  stylesheet.hpp
tools/: make_font_partition.py
